# eepynet

./: .gitignore  README.md  pyproject.toml
configs/: eepynet.yaml
src/eepynet/: __init__.py  config.py  constants.py  utils.py
src/eepynet/data/: __init__.py  augment.py  dataset.py  preprocess.py  records.py  splits.py
src/eepynet/inference/: __init__.py  predict.py
src/eepynet/models/: __init__.py  eepynet.py
src/eepynet/training/: __init__.py  evaluate.py  losses.py  metrics.py  profile_run.py  trainer.py
tests/: test_model_loss_metrics.py  test_preprocess.py  test_splits_dataset.py  test_utils.py
