[project]
name = "eepynet"
version = "0.1.0"
description = "EepyNet training pipeline for Sleep-EDF Expanded EEG sleep staging."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.8",
    "matplotlib>=3.8",
    "mne>=1.7",
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "seaborn>=0.13",
    "tqdm>=4.66",
]

[project.optional-dependencies]
cu128 = [
    "torch>=2.0",
]

[tool.uv]
default-groups = ["dev", "torch-cpu"]
conflicts = [
    [
        { group = "torch-cpu" },
        { extra = "cu128" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", group = "torch-cpu" },
    { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pytest>=8.0",
]
torch-cpu = [
    "torch>=2.0",
]

[project.scripts]
eepynet-preprocess = "eepynet.data.preprocess:main"
eepynet-make-splits = "eepynet.data.splits:main"
eepynet-train = "eepynet.training.trainer:main"
eepynet-eval = "eepynet.training.evaluate:main"
eepynet-infer = "eepynet.inference.predict:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
