[project]
name = "eepynet"
version = "0.1.0"
description = "EepyNet training pipeline for Sleep-EDF Expanded EEG sleep staging."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.8",
    "matplotlib>=3.8",
    "mne>=1.7",
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "seaborn>=0.13",
    "tqdm>=4.66",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.0",
]
cu126 = [
    "torch>=2.0",
]
cu132 = [
    "torch>=2.0",
]

[tool.uv]
default-groups = ["dev"]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu126" },
        { extra = "cu132" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-cu132", extra = "cu132", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
eepynet-preprocess = "eepynet.data.preprocess:main"
eepynet-make-splits = "eepynet.data.splits:main"
eepynet-train = "eepynet.training.trainer:main"
eepynet-eval = "eepynet.training.evaluate:main"
eepynet-infer = "eepynet.inference.predict:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
